--- a/HTML.html
+++ b/HTML.html
@@ -17,101 +17,103 @@
     </header>
     <div class="grupo-cards">
         <div class="card">
-            <img src="" alt="Foto html">
+            <img src="br.png" alt="">
             <div class="titulozinho">
-                <h4>html</h4>
+                <h4>BR</h4>
                     <div class="container">
-                        <p>.</p>
+                        <p>O br insere uma quebra de linha dentro de um parágrafo ou texto. 
+                                    Ele permite separar conteúdo sem criar um novo bloco, mantendo o fluxo do texto.</p>
                     </div>
             </div>
         </div>
 
         <div class="card">
-            <img src="" alt="Foto html">
+            <img src="hr.png" alt="Foto html">
             <div class="titulozinho">
-                <h4>html</h4>
+                <h4>HR</h4>
                     <div class="container">
-                        <p>.</p>
+                        <p>O hr cria uma linha horizontal para separar visualmente seções ou tópicos da página. 
+                                    É útil para organizar conteúdo e indicar mudanças de assunto.</p>
                     </div>
             </div>
         </div>
 
         <div class="card">
-            <img src="" alt="Foto html">
+            <img src="video.png" alt="Foto html">
             <div class="titulozinho">
-                <h4>html</h4>
+                <h4>Video</h4>
                     <div class="container">
-                        <p>.</p>
+                        <p>Insere vídeos na página, com suporte a controles (play, pause, volume).</p>
                     </div>
             </div>
         </div>
 
         <div class="card">
-            <img src="" alt="Foto html">
+            <img src="iframe.png" alt="Foto html">
             <div class="titulozinho">
-                <h4>html</h4>
+                <h4>Iframe</h4>
                     <div class="container">
-                        <p>.</p>
+                        <p>Permite incorporar outra página ou conteúdo externo dentro do site.</p>
                     </div>
             </div>
         </div>
 
         <div class="card">
-            <img src="" alt="Foto html">
+            <img src="em.png" alt="Foto html">
             <div class="titulozinho">
-                <h4>html</h4>
+                <h4>Em</h4>
                     <div class="container">
-                        <p>.</p>
+                        <p>Serve para deixar o texto em itálico.</p>
                     </div>
             </div>
         </div>
 
         <div class="card">
-            <img src="" alt="Foto html">
+            <img src="strong.png" alt="Foto html">
             <div class="titulozinho">
-                <h4>html</h4>
+                <h4>Strong</h4>
                     <div class="container">
-                        <p>.</p>
+                        <p>Serve para deixar o texto em negrito.</p>
                     </div>
             </div>
         </div>
 
         <div class="card">
-            <img src="" alt="Foto html">
+            <img src="select.png" alt="Foto html">
             <div class="titulozinho">
-                <h4>html</h4>
+                <h4>Select</h4>
                     <div class="container">
-                        <p>.</p>
+                        <p>Cria uma lista suspensa, permitindo que o usuário escolha um valor entre várias opções.</p>
                     </div>
             </div>
         </div>
 
         <div class="card">
-            <img src="" alt="Foto html">
+            <img src="ul.png" alt="Foto html">
             <div class="titulozinho">
-                <h4>html</h4>
+                <h4>Ul</h4>
                     <div class="container">
-                        <p>.</p>
+                        <p>define uma lista não ordenada, onde os itens não seguem uma sequência numérica ou alfabética.</p>
                     </div>
             </div>
         </div>
 
         <div class="card">
-            <img src="" alt="Foto html">
+            <img src="ol.png" alt="Foto html">
             <div class="titulozinho">
-                <h4>html</h4>
+                <h4>Ol</h4>
                     <div class="container">
-                        <p>.</p>
+                        <p>Define uma lista ordenada (numerada).</p>
                     </div>
             </div>
         </div>
 
         <div class="card">
-            <img src="" alt="Foto html">
+            <img src="audio.png" alt="Foto html">
             <div class="titulozinho">
-                <h4>html</h4>
+                <h4>Audio</h4>
                     <div class="container">
-                        <p>.</p>
+                        <p>Utilizado para inserir arquivos de audio ao site.</p>
                     </div>
             </div>
         </div>
@@ -122,3 +124,6 @@
     </footer>
 </body>
 </html>
+
+
+<audio src=""></audio>
