--- a/CSS.html
+++ b/CSS.html
@@ -17,101 +17,101 @@
     </header>
     <div class="grupo-cards">
         <div class="card">
-            <img src="" alt="Foto html">
+            <img src="family.png" alt="Foto html">
             <div class="titulozinho">
-                <h4>html</h4>
+                <h4>Font family</h4>
                     <div class="container">
-                        <p>.</p>
+                        <p>Define a fonte do texto.</p>
                     </div>
             </div>
         </div>
 
         <div class="card">
-            <img src="" alt="Foto html">
+            <img src="size.png" alt="Foto html">
             <div class="titulozinho">
-                <h4>html</h4>
+                <h4>Font size</h4>
                     <div class="container">
-                        <p>.</p>
+                        <p>Define o tamanho do texto.</p>
                     </div>
             </div>
         </div>
 
         <div class="card">
-            <img src="" alt="Foto html">
+            <img src="weight.png" alt="Foto html">
             <div class="titulozinho">
-                <h4>html</h4>
+                <h4>Font weight</h4>
                     <div class="container">
-                        <p>.</p>
+                        <p>Define a espessura do texto.</p>
                     </div>
             </div>
         </div>
 
         <div class="card">
-            <img src="" alt="Foto html">
+            <img src="background.png" alt="Foto html">
             <div class="titulozinho">
-                <h4>html</h4>
+                <h4>Background image</h4>
                     <div class="container">
-                        <p>.</p>
+                        <p>Define uma imagem ao fundo do site.</p>
                     </div>
             </div>
         </div>
 
         <div class="card">
-            <img src="" alt="Foto html">
+            <img src="backsize.png" alt="Foto html">
             <div class="titulozinho">
-                <h4>html</h4>
+                <h4>Background size</h4>
                     <div class="container">
-                        <p>.</p>
+                        <p>Ajusta o tamanho da imagem de fundo do site.</p>
                     </div>
             </div>
         </div>
 
         <div class="card">
-            <img src="" alt="Foto html">
+            <img src="backcolor.png" alt="Foto html">
             <div class="titulozinho">
-                <h4>html</h4>
+                <h4>Background color</h4>
                     <div class="container">
-                        <p>.</p>
+                        <p>Define a cor de fundo de um elemento do site.</p>
                     </div>
             </div>
         </div>
 
         <div class="card">
-            <img src="" alt="Foto html">
+            <img src="border.png" alt="Foto html">
             <div class="titulozinho">
-                <h4>html</h4>
+                <h4>Border</h4>
                     <div class="container">
-                        <p>.</p>
+                        <p>Define a borda completa.</p>
                     </div>
             </div>
         </div>
 
         <div class="card">
-            <img src="" alt="Foto html">
+            <img src="radius.png" alt="Foto html">
             <div class="titulozinho">
-                <h4>html</h4>
+                <h4>Border radius</h4>
                     <div class="container">
-                        <p>.</p>
+                        <p>Arredonda as bordas.</p>
                     </div>
             </div>
         </div>
 
         <div class="card">
-            <img src="" alt="Foto html">
+            <img src="gap.png" alt="Foto html">
             <div class="titulozinho">
-                <h4>html</h4>
+                <h4>Gap</h4>
                     <div class="container">
-                        <p>.</p>
+                        <p>Espaçamento entre linhas e colunas.</p>
                     </div>
             </div>
         </div>
 
         <div class="card">
-            <img src="" alt="Foto html">
+            <img src="content.png" alt="Foto html">
             <div class="titulozinho">
-                <h4>html</h4>
+                <h4>Justify content</h4>
                     <div class="container">
-                        <p>.</p>
+                        <p>Controla distribuição dos itens no eixo principal.</p>
                     </div>
             </div>
         </div>
